--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: python
 python:
+- 2.7
 - 3.4
 - 3.5
 - 3.6
+- 3.7-dev
 install:
 - pip install pip -U
 - pip install coverage pytest coveralls
