--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: python
 sudo: required
-dist: xenial
+dist: bionic
 python:
-- 2.7
-- 3.4
 - 3.5
 - 3.6
 - 3.7
 - 3.8
+- 3.9-dev
+- pypy3
 install:
 - pip install pip -U
 - pip install coverage pytest coveralls
@@ -16,6 +16,9 @@ script:
 - coverage run --source intervals -m pytest
 after_success:
 - coveralls
+matrix:
+  allow_failures:
+    - python: 3.9-dev
 deploy:
   provider: pypi
   distributions: sdist bdist_wheel
