Add hypothesis to Travis-CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
 - pypy3
 install:
 - pip install pip -U
-- pip install coverage pytest coveralls
+- pip install coverage pytest coveralls hypothesis
 - pip install -e .
 script:
 - coverage run --source intervals -m pytest
