--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ python:
 - pypy3
 install:
 - pip install pip -U
-- pip install coverage coveralls
-- pip install pytest hypothesis
+- pip install coverage pytest coveralls
 - pip install -e .
 script:
 - coverage run --source intervals -m pytest
