--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 - 3.6
 - 3.7
 - 3.8
-- 3.9-dev
+- 3.9
 - pypy3
 install:
 - pip install pip -U
@@ -27,4 +27,4 @@ deploy:
   on:
     branch: master
     tags: true
-    python: '3.5'
+    python: 3.7
