--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,13 @@ sortedcontainers = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.0.1"
-flake8 = "^3.9.1"
 black = "^20.8b1"
 
 [tool.poetry.extras]
 ci = ["coverage^=5.0.3", "coveralls^=1.11.1"]
+
+[tool.black]
+force-exclude = 'tests/'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
