--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,20 @@
 repos:
   - repo: local
     hooks:
+      - id: install
+        name: install package
+        entry: poetry install
+        language: python
+        always_run: true
+        pass_filenames: false
       - id: pytest
         name: run test suite
-        entry: pytest
+        entry: poetry run pytest
         language: python
         always_run: true
         pass_filenames: false
       - id: black
         name: check code style
-        entry: black --check portion
+        entry: poetry run black --check
         language: python
-        pass_filenames: false
-        always_run: true
+        files: "portion/.*\\.py"
