--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ matrix:
     - python: 3.10-dev
     - python: pypy3
 before_install:
-- pip install poetry
+- pip install pip virtualenv -U
+- curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
 - poetry run pip install coverage coveralls
 install:
 - poetry update --lock
