--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
+os: linux
 language: python
-sudo: required
 dist: focal
 python:
 - 3.6
@@ -8,7 +8,7 @@ python:
 - 3.9
 - 3.10-dev
 - pypy3
-matrix:
+jobs:
   allow_failures:
     - python: 3.10-dev
     - python: pypy3
