--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,16 @@
 repos:
   - repo: local
     hooks:
-      - id: install
-        name: install package
-        entry: poetry install
+      - id: black
+        name: check code style
+        entry: poetry run black --check
         language: python
-        always_run: true
-        pass_filenames: false
+        pass_filenames: true
+        types: ["python"]
       - id: pytest
         name: run test suite
         entry: poetry run pytest
         language: python
         always_run: true
         pass_filenames: false
-      - id: black
-        name: check code style
-        entry: poetry run black --check portion
-        language: python
-        pass_filenames: false
-        always_run: true
+
