--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,11 @@ before_install:
 - pip install pip virtualenv -U
 - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
 - poetry run pip install coverage coveralls
-install:
 - poetry update --lock
+install:
 - poetry install
 script:
+- poetry run black --check
 - poetry run coverage run --source portion -m pytest
 after_success:
 - poetry run coveralls
