--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,9 @@
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry]
-name = "portion"
-version = "2.2.0-dev"
-description = "Python data structure and operations for intervals"
-authors = ["Alexandre Decan <alexandre.decan@lexpage.net>"]
-license = "LGPLv3"
-readme = "README.md"
-homepage = "https://github.com/AlexandreDecan/portion"
-repository = "https://github.com/AlexandreDecan/portion"
-documentation = "https://github.com/AlexandreDecan/portion"
-keywords = ["interval", "operation", "range", "math", "structure"]
-classifiers = [
-    "Development Status :: 5 - Production/Stable",
-    "Intended Audience :: Developers",
-    "Intended Audience :: Education",
-    "Intended Audience :: Information Technology",
-    "Intended Audience :: Science/Research",
-    "Topic :: Scientific/Engineering :: Mathematics",
+requires = [
+  "setuptools >= 40.9.0",
+  "wheel",
 ]
-include = ["README.md", "CHANGELOG.md", "LICENSE.txt", "tests/"]
-
-[tool.poetry.dependencies]
-python = "^3.6"
-sortedcontainers = "^2.2.0"
-
-[tool.poetry.dev-dependencies]
-pytest = "^5.0.1"
-black = {version = "^20.8b1", markers = "implementation_name != 'pypy'"}
-pre-commit = {version = "^2.12.1", python = "^3.6.1"}
+build-backend = "setuptools.build_meta"
 
 [tool.black]
 force-exclude = 'tests/'
