--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,5 +36,21 @@ test = ["pytest ~= 7.0", "coverage ~= 6.0", "ruff >= 0.6.9"]
 [tool.ruff]
 extend-exclude = ["tests/"]
 
+[tool.ruff.lint]
+select = [
+    "F",   # pyflakes
+    "E",   # pycodestyle
+    "W",   # pycodestyle
+    "UP",  # pyupgrade
+    "I",   # Sort imports
+    "N",   # pep8-naming
+    "B",   # flake8-bugbear
+    "SIM", # flake8-simplify
+    "C4",  # flake8-comprehensions
+    "PIE", # flake8-pie
+    "Q",   # flake8-quotes
+]
+ignore = ["B028"]
+
 [tool.setuptools]
 packages = ["portion"]
