--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ description = "Python data structure and operations for intervals"
 readme = { file = "README.md", content-type = "text/markdown" }
 urls = { Homepage = "https://github.com/AlexandreDecan/portion" }
 keywords = ["interval", "range", "span"]
-requires-python = "~= 3.9"
+requires-python = ">= 3.9"
 dependencies = ["sortedcontainers ~= 2.2"]
 classifiers = [
     "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
