Reverted typestubs. Added `typings` to tool.ruff extend-exclude

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ classifiers = [
 test = ["pytest ~= 7.0", "coverage ~= 6.0", "ruff >= 0.6.9"]
 
 [tool.ruff]
-extend-exclude = ["tests/"]
+extend-exclude = ["tests/", "typings/"]
 
 [tool.ruff.lint]
 select = [
