--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 test = ["pytest ~= 7.0", "coverage ~= 6.0", "ruff >= 0.6.9"]
 
 [tool.ruff]
