--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,8 +34,7 @@ jobs:
           uv run ruff format --check
       - name: Execute tests
         run: |
-          uv run coverage run --source portion -m pytest
-          uv run coverage report
+          uv run pytest --cov portion
       - name: Upload coverage to Coveralls
         uses: coverallsapp/github-action@v2
         env:
