--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv_build >= 0.7.19, <0.8.0"]
+build-backend = "uv_build"
 
 [project]
 name = "portion"
