--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,6 +36,6 @@ jobs:
           uv run ruff format --check
       - name: Execute tests
         run: |
-          uv run pytest --cov-report lcov portion
+          uv run pytest --cov-report lcov -cov portion
       - name: Upload coverage to Coveralls
         uses: coverallsapp/github-action@v2
