--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "portion"
 version = "2.6.2-pre1"
-license = "LGPLv3"
+license = "LGPL-3.0-or-later"
 license-files = ["LICENSE.txt"]
 authors = [{ name = "Alexandre Decan", email = "alexandre.decan@lexpage.net" }]
 description = "Python data structure and operations for intervals"
